Fix post meta icon spacing when using RTL languages

--- a/sass/layout/rtl/rtl-float.scss
+++ b/sass/layout/rtl/rtl-float.scss
@@ -161,6 +161,11 @@ li>ul {
 	text-align: right !important;
 }
 
+.entry-meta .gp-icon {
+	margin-right: 0;
+	margin-left: 0.6em;
+}
+
 @media (max-width: 768px) {
 	.rtl .mobile-bar-items {
         position: absolute;
